samples/_failures_safe/1761260453_5e495c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0b77d3b5.c: In function ‘main’:
./samples/SAFE/__tmp_0b77d3b5.c:149:5: error: expected expression at end of input
  149 |     printf("WARN:  %d\n",
      |     ^~~~~~
./samples/SAFE/__tmp_0b77d3b5.c:149:5: error: expected declaration or statement at end of input
